--- a/app/src/main/res/drawable/vector_columns.xml
+++ b/app/src/main/res/drawable/vector_columns.xml
@@ -3,8 +3,8 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="@color/orange">
+    android:tint="@color/vivid_red">
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M21,3H3C2,3 1,4 1,5v14c0,1.1 0.9,2 2,2h18c1,0 2,-1 2,-2V5c0,-1 -1,-2 -2,-2zM5,17l3.5,-4.5 2.5,3.01L14.5,11l4.5,6H5z"/>
+      android:pathData="M14.67,5v14H9.33V5H14.67zM15.67,19H21V5h-5.33V19zM8.33,19V5H3v14H8.33z"/>
 </vector>
