--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,24 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="all_luts">
+        <item>:Monochrome</item>
+        <item>::Agfa</item>
         <item>agfa_apx_100</item>
         <item>agfa_apx_25</item>
+        <item>::Fuji</item>
+        <item>fuji_fp_3000b_1</item>
+        <item>fuji_fp_3000b_2</item>
+        <item>fuji_fp_3000b_3</item>
+        <item>fuji_fp_3000b_4</item>
+        <item>fuji_fp_3000b_5</item>
+        <item>fuji_fp_3000b_6</item>
+        <item>fuji_fp_3000b_hc</item>
+        <item>fuji_fp_3000b_negative_1</item>
+        <item>fuji_fp_3000b_negative_2</item>
+        <item>fuji_fp_3000b_negative_3</item>
+        <item>fuji_fp_3000b_negative_4</item>
+        <item>fuji_fp_3000b_negative_5</item>
+        <item>fuji_fp_3000b_negative_6</item>
+        <item>fuji_fp_3000b_negative_early</item>
+        <item>fuji_neopan_1600_1</item>
+        <item>fuji_neopan_1600_2</item>
+        <item>fuji_neopan_1600_3</item>
+        <item>fuji_neopan_1600_4</item>
+        <item>fuji_neopan_acros_100</item>
+        <item>::Ilford</item>
+        <item>ilford_delta_100</item>
+        <item>ilford_delta_3200_1</item>
+        <item>ilford_delta_3200_2</item>
+        <item>ilford_delta_3200_3</item>
+        <item>ilford_delta_3200_4</item>
+        <item>ilford_delta_400</item>
+        <item>ilford_fp4_plus_125</item>
+        <item>ilford_hp5_1</item>
+        <item>ilford_hp5_2</item>
+        <item>ilford_hp5_3</item>
+        <item>ilford_hp5_4</item>
+        <item>ilford_hp5_plus_400</item>
+        <item>ilford_hps_800</item>
+        <item>ilford_pan_f_plus_50</item>
+        <item>ilford_xp2</item>
+        <item>::Kodak</item>
+        <item>kodak_hie_hs_infra</item>
+        <item>kodak_bw_400_cn</item>
+        <item>kodak_t_max_100</item>
+        <item>kodak_t_max_400</item>
+        <item>kodak_tmax_3200_1</item>
+        <item>kodak_tmax_3200_2</item>
+        <item>kodak_tmax_3200_3_alt</item>
+        <item>kodak_tmax_3200_4</item>
+        <item>kodak_tmax_3200_5</item>
+        <item>kodak_tri_x_400_1</item>
+        <item>kodak_tri_x_400_2</item>
+        <item>kodak_tri_x_400_3_alt</item>
+        <item>kodak_tri_x_400_4</item>
+        <item>kodak_tri_x_400_5</item>
+        <item>::Polaroid</item>
+        <item>polaroid_664</item>
+        <item>polaroid_665_1</item>
+        <item>polaroid_665_2</item>
+        <item>polaroid_665_3</item>
+        <item>polaroid_665_4</item>
+        <item>polaroid_665_5</item>
+        <item>polaroid_665_negative_1</item>
+        <item>polaroid_665_negative_2</item>
+        <item>polaroid_665_negative_3</item>
+        <item>polaroid_665_negative_hc</item>
+        <item>polaroid_667</item>
+        <item>polaroid_672</item>
+        <item>::Rollei</item>
+        <item>rollei_ir_400</item>
+        <item>rollei_ortho_25</item>
+        <item>rollei_retro_100_tonal</item>
+        <item>rollei_retro_80s</item>
+        <item>:Colour</item>
+        <item>::Agfa</item>
         <item>agfa_precisa_100</item>
         <item>agfa_ultra_color_100</item>
         <item>agfa_vista_200</item>
-        <item>anime</item>
-        <item>bleachbypass1</item>
-        <item>bleachbypass2</item>
-        <item>bleachbypass3</item>
-        <item>bleachbypass4</item>
-        <item>candlelight</item>
-        <item>colornegative</item>
-        <item>crispwarm</item>
-        <item>crispwinter</item>
-        <item>dropblues</item>
-        <item>edgyember</item>
-        <item>fallcolors</item>
-        <item>foggynight</item>
+        <item>::Fuji</item>
         <item>fuji_160c_1</item>
         <item>fuji_160c_2</item>
         <item>fuji_160c_3</item>
@@ -53,25 +114,6 @@
         <item>fuji_fp_100c_negative_5</item>
         <item>fuji_fp_100c_negative_6_alt</item>
         <item>fuji_fp_100c_negative_7</item>
-        <item>fuji_fp_3000b_1</item>
-        <item>fuji_fp_3000b_2</item>
-        <item>fuji_fp_3000b_3</item>
-        <item>fuji_fp_3000b_4</item>
-        <item>fuji_fp_3000b_5</item>
-        <item>fuji_fp_3000b_6</item>
-        <item>fuji_fp_3000b_hc</item>
-        <item>fuji_fp_3000b_negative_1</item>
-        <item>fuji_fp_3000b_negative_2</item>
-        <item>fuji_fp_3000b_negative_3</item>
-        <item>fuji_fp_3000b_negative_4</item>
-        <item>fuji_fp_3000b_negative_5</item>
-        <item>fuji_fp_3000b_negative_6</item>
-        <item>fuji_fp_3000b_negative_early</item>
-        <item>fuji_neopan_1600_1</item>
-        <item>fuji_neopan_1600_2</item>
-        <item>fuji_neopan_1600_3</item>
-        <item>fuji_neopan_1600_4</item>
-        <item>fuji_neopan_acros_100</item>
         <item>fuji_provia_100_generic</item>
         <item>fuji_provia_100f</item>
         <item>fuji_provia_400f</item>
@@ -99,27 +141,7 @@
         <item>fuji_superia_x_tra_800</item>
         <item>fuji_velvia_100_generic</item>
         <item>fuji_velvia_50</item>
-        <item>futuristicbleak1</item>
-        <item>futuristicbleak2</item>
-        <item>futuristicbleak3</item>
-        <item>futuristicbleak4</item>
-        <item>horrorblue</item>
-        <item>ilford_delta_100</item>
-        <item>ilford_delta_3200_1</item>
-        <item>ilford_delta_3200_2</item>
-        <item>ilford_delta_3200_3</item>
-        <item>ilford_delta_3200_4</item>
-        <item>ilford_delta_400</item>
-        <item>ilford_fp4_plus_125</item>
-        <item>ilford_hp5_1</item>
-        <item>ilford_hp5_2</item>
-        <item>ilford_hp5_3</item>
-        <item>ilford_hp5_4</item>
-        <item>ilford_hp5_plus_400</item>
-        <item>ilford_hps_800</item>
-        <item>ilford_pan_f_plus_50</item>
-        <item>ilford_xp2</item>
-        <item>kodak_bw_400_cn</item>
+        <item>::Kodak</item>
         <item>kodak_e_100_gx_ektachrome_100</item>
         <item>kodak_ektachrome_100_vs</item>
         <item>kodak_ektachrome_100_vs_generic</item>
@@ -130,7 +152,6 @@
         <item>kodak_elite_color_200</item>
         <item>kodak_elite_color_400</item>
         <item>kodak_elite_extracolor_100</item>
-        <item>kodak_hie_hs_infra</item>
         <item>kodak_kodachrome_200</item>
         <item>kodak_kodachrome_25</item>
         <item>kodak_kodachrome_64</item>
@@ -168,43 +189,7 @@
         <item>kodak_portra_800_3</item>
         <item>kodak_portra_800_4</item>
         <item>kodak_portra_800_hc</item>
-        <item>kodak_t_max_100</item>
-        <item>kodak_t_max_400</item>
-        <item>kodak_tmax_3200_1</item>
-        <item>kodak_tmax_3200_2</item>
-        <item>kodak_tmax_3200_3_alt</item>
-        <item>kodak_tmax_3200_4</item>
-        <item>kodak_tmax_3200_5</item>
-        <item>kodak_tri_x_400_1</item>
-        <item>kodak_tri_x_400_2</item>
-        <item>kodak_tri_x_400_3_alt</item>
-        <item>kodak_tri_x_400_4</item>
-        <item>kodak_tri_x_400_5</item>
-        <item>latesunset</item>
-        <item>lomography_redscale_100</item>
-        <item>lomography_x_pro_slide_200</item>
-        <item>lut_bleach</item>
-        <item>lut_blue_crush</item>
-        <item>lut_bw_contrast</item>
-        <item>lut_instant</item>
-        <item>lut_punch</item>
-        <item>lut_vintage</item>
-        <item>lut_washout</item>
-        <item>lut_washout_color</item>
-        <item>lut_x_process</item>
-        <item>moonlight</item>
-        <item>nightfromday</item>
-        <item>polaroid_664</item>
-        <item>polaroid_665_1</item>
-        <item>polaroid_665_2</item>
-        <item>polaroid_665_3</item>
-        <item>polaroid_665_4</item>
-        <item>polaroid_665_5</item>
-        <item>polaroid_665_negative_1</item>
-        <item>polaroid_665_negative_2</item>
-        <item>polaroid_665_negative_3</item>
-        <item>polaroid_665_negative_hc</item>
-        <item>polaroid_667</item>
+        <item>::Polaroid</item>
         <item>polaroid_669_1</item>
         <item>polaroid_669_2</item>
         <item>polaroid_669_3</item>
@@ -215,7 +200,6 @@
         <item>polaroid_669_cold_2</item>
         <item>polaroid_669_cold_3</item>
         <item>polaroid_669_cold_4</item>
-        <item>polaroid_672</item>
         <item>polaroid_690_1</item>
         <item>polaroid_690_2</item>
         <item>polaroid_690_3</item>
@@ -286,11 +270,40 @@
         <item>polaroid_time_zero_expired_cold_2</item>
         <item>polaroid_time_zero_expired_cold_3</item>
         <item>polaroid_time_zero_expired_cold_4</item>
+        <item>:Miscellaneous</item>
+        <item>anime</item>
+        <item>bleachbypass1</item>
+        <item>bleachbypass2</item>
+        <item>bleachbypass3</item>
+        <item>bleachbypass4</item>
+        <item>candlelight</item>
+        <item>colornegative</item>
+        <item>crispwarm</item>
+        <item>crispwinter</item>
+        <item>dropblues</item>
+        <item>edgyember</item>
+        <item>fallcolors</item>
+        <item>foggynight</item>
+        <item>futuristicbleak1</item>
+        <item>futuristicbleak2</item>
+        <item>futuristicbleak3</item>
+        <item>futuristicbleak4</item>
+        <item>horrorblue</item>
+        <item>latesunset</item>
+        <item>lomography_redscale_100</item>
+        <item>lomography_x_pro_slide_200</item>
+        <item>lut_bleach</item>
+        <item>lut_blue_crush</item>
+        <item>lut_bw_contrast</item>
+        <item>lut_instant</item>
+        <item>lut_punch</item>
+        <item>lut_vintage</item>
+        <item>lut_washout</item>
+        <item>lut_washout_color</item>
+        <item>lut_x_process</item>
+        <item>moonlight</item>
+        <item>nightfromday</item>
         <item>redblueyellow</item>
-        <item>rollei_ir_400</item>
-        <item>rollei_ortho_25</item>
-        <item>rollei_retro_100_tonal</item>
-        <item>rollei_retro_80s</item>
         <item>smokey</item>
         <item>softwarming</item>
         <item>tealmagentagold</item>
