--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="vivid_red">#EE5555</color>
+    <color name="orange">#FF9933</color>
+    <color name="dark_red">#B54444</color>
 </resources>
