--- a/app/src/main/res/layout/lut_info_bottomsheet.xml
+++ b/app/src/main/res/layout/lut_info_bottomsheet.xml
@@ -9,18 +9,43 @@
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/preview_card"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         app:cardCornerRadius="10dp"
         app:cardUseCompatPadding="true">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/lut_preview_image"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            tools:src="@drawable/reference_image"
-            android:adjustViewBounds="true" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/lut_preview_image"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                tools:src="@drawable/reference_image"
+                android:adjustViewBounds="true" />
+
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/prev_variant"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/vector_previous"
+                android:visibility="gone"
+                android:layout_alignBottom="@+id/lut_preview_image"/>
+
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/next_variant"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/vector_next"
+                android:visibility="gone"
+                android:layout_alignBottom="@+id/lut_preview_image"
+                android:layout_alignParentEnd="true"/>
+
+        </RelativeLayout>
+
+
 
     </com.google.android.material.card.MaterialCardView>
 
