--- a/app/src/main/res/drawable/vector_previous.xml
+++ b/app/src/main/res/drawable/vector_previous.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
+    android:tint="#efefef">
   <path
       android:fillColor="@android:color/white"
       android:pathData="M15.41,7.41L14,6l-6,6 6,6 1.41,-1.41L10.83,12z"/>
