--- a/app/src/main/res/layout/lut_info_bottomsheet.xml
+++ b/app/src/main/res/layout/lut_info_bottomsheet.xml
@@ -28,17 +28,21 @@
 
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/prev_variant"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/variant_button_diam"
+                android:layout_height="@dimen/variant_button_diam"
                 android:src="@drawable/vector_previous"
+                android:layout_margin="4dp"
+                android:background="@drawable/vector_drawable_circle_dark"
                 android:visibility="gone"
                 android:layout_alignBottom="@+id/lut_preview_image"/>
 
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/next_variant"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/variant_button_diam"
+                android:layout_height="@dimen/variant_button_diam"
                 android:src="@drawable/vector_next"
+                android:layout_margin="4dp"
+                android:background="@drawable/vector_drawable_circle_dark"
                 android:visibility="gone"
                 android:layout_alignBottom="@+id/lut_preview_image"
                 android:layout_alignParentEnd="true"/>
