--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -240,7 +240,7 @@
         <item>kodak_tmax_3200_5</item>
         <item>kodak_tri_x_400_1</item>
         <item>kodak_tri_x_400_2</item>
-        <item>kodak_tri_x_400_3_alt</item>
+        <item>kodak_tri_x_400_3</item>
         <item>kodak_tri_x_400_4</item>
         <item>kodak_tri_x_400_5</item>
         <item>::Polaroid</item>
