--- a/app/src/main/res/layout/about_bottomsheet.xml
+++ b/app/src/main/res/layout/about_bottomsheet.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
-        android:text="Luts Explorer lets you preview lut filters from the RawTherapee Film Simulation collection and other sources and export them for use in other applications.\n\nFrom the RawTherapee website:\n"/>
+        android:text="Luts Explorer lets you preview lut filters from the RawTherapee Film Simulation collection and other sources and export them for use in other applications. This collection has converted the luts from the original HaldCLUT format into smaller and more memory efficient 256x16 pixel 'Unreal' format luts.\n\nFrom the RawTherapee website:\n"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
